Refactoring of specjbb scripts